--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -9,15 +9,15 @@
 				<label>▷郵便番号</label>
 				<!-- ▼郵便番号入力フィールド(7桁) -->
 <!-- ▼郵便番号入力フィールド(3桁+4桁) -->
-<input type="text" name="zip31" size="4" maxlength="3"> － <input type="text" name="zip32" size="5" maxlength="4" onKeyUp="AjaxZip3.zip2addr('zip31','zip32','pref31','addr31','addr31');">
+<input type="text" name="zip31" size="4" maxlength="3" class="form-control"> － <input type="text" name="zip32" size="5" maxlength="4" onKeyUp="AjaxZip3.zip2addr('zip31','zip32','pref31','addr31','addr31');" class="form-control">
 			</div>
 
 			<div class="form-group">
 				<label>︎▷住所</label>
 <!-- ▼住所入力フィールド(都道府県) -->
-<input type="text" name="pref31" size="20">
+<input type="text" name="pref31" size="20" class="form-control">
 <!-- ▼住所入力フィールド(都道府県以降の住所) -->
-<input type="text" name="addr31" size="40">
+<input type="text" name="addr31" size="40" class="form-control">
 			</div>   
 		</div> 
 	</div>
